Fix z-index on sections

--- a/index.css
+++ b/index.css
@@ -187,7 +187,7 @@ body {
   background-color: #f7ad80;
   z-index: 0;
 }
-.background-landing-clip::before {
+.background-landing-clip::after {
   content: "";
   position: absolute;
   bottom: 0;
